--- a/blogs.html
+++ b/blogs.html
@@ -2,6 +2,7 @@
 layout: post
 permalink: blogs
 date:   2017-01-10 15:50:06 +0530
+title: "Deep Learning Blogs"
 ---
 
 {% for post in site.posts %}
