--- a/blogs.html
+++ b/blogs.html
@@ -3,6 +3,10 @@ layout: post
 permalink: blogs
 date:   2017-01-10 15:50:06 +0530
 title: "Deep Learning Blogs"
+sitemap:
+    priority: 1.0
+    changefreq: 'monthly'
+    lastmod: 2017-01-06 15:50:06 +0530
 ---
 
 {% for post in site.posts %}
