--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 ---
 layout: cover
 title: "Deep Learning Blogs"
+sitemap:
+    priority: 1.0
+    changefreq: 'monthly'
+    lastmod: 2017-01-06 15:50:06 +0530
 ---
