--- a/index.html
+++ b/index.html
@@ -6,3 +6,10 @@ sitemap:
     changefreq: 'monthly'
     lastmod: 2017-01-06 15:50:06 +0530
 ---
+<div class="inner cover">
+  <h1 class="cover-heading">by Zafarullah Mahmood</h1>
+  <p class="lead">Awesome blogs and tutorials to get started with Deep Learning</p>
+  <p class="lead">
+    <a href='{{ "/blogs" | absolute_url }}' class="btn btn-lg btn-default">Explore</a>
+  </p>
+</div>
