--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@ permalink: /404.html
       <p><strong>File not found</strong></p>
 
       <p>
-        The site configured at this address does not
+        Aww snap! The site configured at this address does not
         contain the requested file.
       </p>
 
