fixed some typo

--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@ permalink: /404.html
 
       <p>
         Aww snap! The site configured at this address does not
-        contain the requested file.
+        contain the requested file. ;-)
       </p>
 
 </div>
