--- a/blogs.html
+++ b/blogs.html
@@ -18,6 +18,7 @@ sitemap:
           </h2>
           </div>
         </a>
+
     <div id="collapse{{ post.permalink }}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading{{ post.permalink }}">
       <div class="panel-body post-preview">
             {% if post.content contains '<!--more-->' %}
@@ -44,6 +45,7 @@ sitemap:
               </p>
               <div class="clearfix"></div>
             {% endif %}
+            <!-- Comment 1 -->
 
       </div>
     </div>
