--- a/blogs.html
+++ b/blogs.html
@@ -46,6 +46,7 @@ sitemap:
               <div class="clearfix"></div>
             {% endif %}
             <!-- Comment 1 -->
+            <!-- Comment 2 -->
 
       </div>
     </div>
