--- a/blogs.html
+++ b/blogs.html
@@ -47,6 +47,7 @@ sitemap:
             {% endif %}
             <!-- Comment 1 -->
             <!-- Comment 2 -->
+            <!-- Comment 3 -->
 
       </div>
     </div>
