--- a/blogs.html
+++ b/blogs.html
@@ -48,6 +48,7 @@ sitemap:
             <!-- Comment 1 -->
             <!-- Comment 2 -->
             <!-- Comment 3 -->
+            <!-- Comment 4 -->
 
       </div>
     </div>
