--- a/blogs.html
+++ b/blogs.html
@@ -49,6 +49,7 @@ sitemap:
             <!-- Comment 2 -->
             <!-- Comment 3 -->
             <!-- Comment 4 -->
+            <!-- Comment 5 -->
 
       </div>
     </div>
